{
    "name": "DOTSDemo",
    "maps": [
        {
            "name": "DemoBindings",
            "id": "c497e6dc-6a73-49d6-be63-08f45141c823",
            "actions": [
                {
                    "name": "PlayerMove",
                    "type": "Value",
                    "id": "ffb91dc0-8cbd-40e0-877c-e9b5989caf11",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlayerFire",
                    "type": "Button",
                    "id": "8508b225-f02b-46da-9b0f-8f354c7eb8bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GetRandomInt",
                    "type": "Button",
                    "id": "a7d4562b-556c-4f26-838d-38e1d9babe8f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GetRandomFloat",
                    "type": "Button",
                    "id": "d9e452bb-77b4-4809-a3b5-8342f6f2a87c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "c7afe516-efa2-4de8-a7db-d1ded0447184",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "02e93d39-629c-4352-b166-7d83447eb7d4",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d86f2871-b8bc-46d8-ad36-2b097deb5457",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c5e17780-857e-4739-bb1f-86ea79dbe364",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "730fbab9-184a-4967-b32f-b563d7784cd8",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "80e302bc-4d7f-49aa-a517-7c6b7b3acdf1",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e84f131b-8b83-4235-abc2-c713ed2cebed",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetRandomInt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f59909d-d7e4-43b6-afb9-4bbfb8b211ad",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetRandomFloat",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ConstructionBindings",
            "id": "a8abf57f-c6bf-4481-b336-6f7d66561cec",
            "actions": [
                {
                    "name": "BuildOilRig1",
                    "type": "Button",
                    "id": "8ecd642c-c0ce-4122-8481-888c40538ae8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildOilRig2",
                    "type": "Button",
                    "id": "389a9a07-a502-4052-a0eb-e22a303b6c06",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildOilRig3",
                    "type": "Button",
                    "id": "e894ce1f-42a7-42fc-8191-690b8d2dab91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildOilRig4",
                    "type": "Button",
                    "id": "6524ff3b-5237-4cbc-ab36-0d77e6a13b0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildOilRig5",
                    "type": "Button",
                    "id": "d40261c8-47cb-4539-9714-b51682a2281a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildFactory1",
                    "type": "Button",
                    "id": "ba0ccdfd-4122-4c4b-a525-c708a2588766",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildFactory2",
                    "type": "Button",
                    "id": "6ef854e6-f178-448e-963c-3728bc3f4d4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildFactory3",
                    "type": "Button",
                    "id": "b2557f67-c41f-4df2-92ee-03153767663c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildFactory4",
                    "type": "Button",
                    "id": "30c43a11-aebb-484a-850c-abcd0bd5b199",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildFactory5",
                    "type": "Button",
                    "id": "e09a6e1b-98c5-4879-8a2d-dea970b9bdbc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildFactory6",
                    "type": "Button",
                    "id": "a459ec49-14be-49fc-b4f8-9766c74b33b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildFactory7",
                    "type": "Button",
                    "id": "641e25e4-c8d5-445c-9bbf-b8d14976bbd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildFactory8",
                    "type": "Button",
                    "id": "df10ec0e-b4b0-4caa-b621-7f06721fd8d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildFactory9",
                    "type": "Button",
                    "id": "7083c5ce-7b09-4fcc-9452-df25eb8f55fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuildFactory10",
                    "type": "Button",
                    "id": "5a274da1-5cc2-4e9e-9476-ad21ffd80727",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Marche",
                    "type": "Button",
                    "id": "f8c64211-dabb-4050-a20d-f66226fd772d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "091e06e0-12a9-4b51-b200-8b5e23027e82",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildOilRig1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71a9f94c-bc90-4a9a-b8d2-aa8489acf2b1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildOilRig2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b051540-8f8e-4092-a287-1764391dc490",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildOilRig3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e764d820-f053-47d3-b2aa-1d1b339b6fa4",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildOilRig4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08626d44-d497-4c08-a4bf-a1f4262347d9",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildOilRig5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26c21eaf-c11e-49e6-a64f-534a589aa1ce",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildFactory1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2daacfb6-87f8-440c-b67b-8a23132e044f",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildFactory2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15069eba-4b8b-4d38-8404-f48c2587c1f0",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildFactory3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c409a5d7-70e4-491b-b321-99200599409f",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildFactory4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec67aaf4-2f12-4a60-8aba-b52e85f2c6e0",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildFactory5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abfc708a-4848-4659-a3fe-fa1edbed8724",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildFactory6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91d17166-eded-4ca1-bb22-e68ab90ffe16",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildFactory7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef733550-dbb5-404e-809a-dce0b1f399e6",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildFactory8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc8ca1f1-ca26-4a68-9739-8a3d746d55da",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildFactory9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7be251e-27a8-41d8-8d1a-9a9b68b4df88",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildFactory10",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7567aff-fb4d-4810-b007-946eb28c1568",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Marche",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}